# academic-victim

./: -.gitignore  .env  .gitignore  README.md  ai.py  icon.icns  main.py  pyproject.toml  requirements.txt  setup.py  test.py
